Added part time study

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="shadow-bar"></div>
       <div class="details" id="about-text">
         <p>Hello, I am a self-taught full stack web developer <br>
-          Currently studying Computing at NCI Dublin <br>
+          Currently studying Computing part time at NCI Dublin <br>
           I design and build mockups, web pages and backend systems
         </p>
       </div>
