Added storybooks, links on images, fixed linkedin text

--- a/index.html
+++ b/index.html
@@ -203,11 +203,15 @@
   <!-- PORTFOLIO -->
   <div class="section portfolio" id="portfolio">
     <div class="portfolio-container">
+
       <h2>Personal projects</h2>
+
       <div class="portfolio-card-container">
 
         <div class="portfolio-card">
-          <img src="img/wordcloud.png" alt="channel word cloud thumbnail">
+          <a href="https://tubewordcloud.herokuapp.com/" target="_blank">
+            <img src="img/wordcloud.png" alt="channel word cloud thumbnail">
+          </a>
           <div class="portfolio-card-text-container">
             <h5>Tube Channel Word Cloud</h5>
             <p>Word cloud generated from a YouTube channel's video titles</p>
@@ -227,7 +231,9 @@
         </div>
 
         <div class="portfolio-card">
-          <img src="img/rialto.png" alt="channel word cloud thumbnail">
+          <a href="https://www.rialtobridgecafe.com/" target="_blank">
+            <img src="img/rialto.png" alt="rialto bridge cafe cloud thumbnail">
+          </a>
           <div class="portfolio-card-text-container">
             <h5>Rialto Bridge Cafe</h5>
             <p>Website for Rialto Bridge Cafe - Client work</p>
@@ -239,14 +245,44 @@
                 <i class="fas fa-external-link-alt fa-2x"></i></a>
             </div>
           </div>
+
         </div>
+
+        <div class="portfolio-card">
+          <a href="https://storybooks.robertsoldan.com/" target="_blank">
+            <img src="img/storybooks.png" alt="storybooks thumbnail">
+          </a>
+          <div class="portfolio-card-text-container">
+            <h5>Storybooks</h5>
+            <p>Storybooks / article like website using Google OAuth 2.0</p>
+            <p>NodeJS, Handlebars, Materialize CSS, Google OAuth 2.0, MongoDB</p>
+          </div>
+          <div class="portfolio-card-buttons-container">
+            <div class="portfolio-card-button">
+              <a href="https://storybooks.robertsoldan.com/" target="_blank">
+                <i class="fas fa-external-link-alt fa-2x"></i></a>
+            </div>
+            <div class="portfolio-card-button">
+              <a href="https://github.com/robertsoldan/storybooks" target="_blank">
+                <i class="fas fa-code fa-2x"></i>
+              </a>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+      <div>
       </div>
 
       <h2>College projects</h2>
       <div class="portfolio-card-container">
 
         <div class="portfolio-card">
-          <img src="img/bonvoyage.png" alt="channel word cloud thumbnail">
+          <a href="https://bonvoyagewebdevca.herokuapp.com/" target="_blank">
+            <img src="img/bonvoyage.png" alt="bon voyage thumbnail">
+          </a>
           <div class="portfolio-card-text-container">
             <h5>Bon Voyage</h5>
             <p>Group project for creating a CRUD web app for a travel agency</p>
@@ -266,9 +302,11 @@
         </div>
 
         <div class="portfolio-card">
-          <img src="img/cardiuil.png" alt="channel word cloud thumbnail">
+          <a href="https://github.com/robertsoldan/carpoolapp" target="_blank">
+            <img src="img/cardiuil.png" alt="cardiuil cloud thumbnail">
+          </a>
           <div class="portfolio-card-text-container">
-            <h5>Cardiuil</h5>
+            <h5>Cardiúil</h5>
             <p>Group project for creating a CRUD carpooling Java app</p>
             <p>Java, PostgreSQL</p>
           </div>
@@ -287,7 +325,9 @@
       <div class="portfolio-card-container">
 
         <div class="portfolio-card">
-          <img src="img/gameoflife.png" alt="game of life website thumbnail">
+          <a href="https://robb1010.github.io/gameoflife/" target="_blank">
+            <img src="img/gameoflife.png" alt="game of life website thumbnail">
+          </a>
           <div class="portfolio-card-text-container">
             <h5>Game of life</h5>
             <p>Game of life front end project</p>
@@ -307,7 +347,9 @@
         </div>
 
         <div class="portfolio-card">
-          <img src="img/calculator.png" alt="channel word cloud thumbnail">
+          <a href="https://robb1010.github.io/calculator/" target="_blank">
+            <img src="img/calculator.png" alt="calculator thumbnail">
+          </a>
           <div class="portfolio-card-text-container">
             <h5>Calculator</h5>
             <p>Full screen front end calculator</p>
@@ -327,7 +369,9 @@
         </div>
 
         <div class="portfolio-card">
-          <img src="img/markdown.png" alt="markdown thumbnail">
+          <a href="https://robb1010.github.io/Markdown/" target="_blank">
+            <img src="img/markdown.png" alt="markdown thumbnail">
+          </a>
           <div class="portfolio-card-text-container">
             <h5>Markdown editor</h5>
             <p>Github - like markdown editor</p>
@@ -347,7 +391,9 @@
         </div>
 
         <div class="portfolio-card">
-          <img src="img/tictactoe.png" alt="tic tac toe thumbnail">
+          <a href="https://robb1010.github.io/tictactoe/" target="_blank">
+            <img src="img/tictactoe.png" alt="tic tac toe thumbnail">
+          </a>
           <div class="portfolio-card-text-container">
             <h5>Tic tac toe</h5>
             <p>Basic tic tac toe game</p>
@@ -367,7 +413,9 @@
         </div>
 
         <div class="portfolio-card">
-          <img src="img/simonsays.png" alt="simon says thumbnail">
+          <a href="https://robb1010.github.io/tiles/" target="_blank">
+            <img src="img/simonsays.png" alt="simon says thumbnail">
+          </a>
           <div class="portfolio-card-text-container">
             <h5>Simon says</h5>
             <p>Basic Simon Says game</p>
@@ -399,18 +447,20 @@
 
   <div class="section contact" id="contact">
     <div class="contact-container">
-      <h2>Email me at <i class="fas fa-envelope"></i><a href = "mailto: contact@robertsoldan.com"> contact@robertsoldan.com</a></h2>
+      <h2>Email me at <i class="fas fa-envelope"></i><a href="mailto: contact@robertsoldan.com">
+          contact@robertsoldan.com</a></h2>
       <h2>Find me on github at
         <a href="https://github.com/robb1010" target="_blank"> <i class="fab fa-github "></i> robb1010
-          </a> and <a href="https://github.com/robertsoldan" target="_blank">
-            <i class="fab fa-github"></i> robertsoldan
-          </a></h2>
-      <h2><a href="https://www.linkedin.com/in/robertsoldan/" target="_blank"><i class="fab fa-linkedin"></i> Linkedin </a></h2>
+        </a> and <a href="https://github.com/robertsoldan" target="_blank">
+          <i class="fab fa-github"></i> robertsoldan
+        </a></h2>
+      <h2>Get in touch on Linkedin at <a href="https://www.linkedin.com/in/robertsoldan/" target="_blank"><i
+            class="fab fa-linkedin"></i> robertsoldan </a></h2>
     </div>
   </div>
 
   <div class="footer">
-    <p>&copy; 2020 Robert Soldan</p>  
+    <p>&copy; 2020 Robert Soldan</p>
   </div>
 </body>
 <script src="script.js"></script>
