--- a/index.html
+++ b/index.html
@@ -209,9 +209,11 @@
       <div class="portfolio-card-container">
 
         <div class="portfolio-card">
-          <a href="https://tubewordcloud.herokuapp.com/" target="_blank">
-            <img src="img/wordcloud.png" alt="channel word cloud thumbnail">
-          </a>
+          <div class="imgcontainer">
+            <a href="https://tubewordcloud.herokuapp.com/" target="_blank">
+              <img src="img/wordcloud.png" alt="channel word cloud thumbnail">
+            </a>
+          </div>
           <div class="portfolio-card-text-container">
             <h5>Tube Channel Word Cloud</h5>
             <p>Word cloud generated from a YouTube channel's video titles</p>
@@ -231,9 +233,11 @@
         </div>
 
         <div class="portfolio-card">
-          <a href="https://www.rialtobridgecafe.com/" target="_blank">
-            <img src="img/rialto.png" alt="rialto bridge cafe cloud thumbnail">
-          </a>
+          <div class="imgcontainer">
+            <a href="https://www.rialtobridgecafe.com/" target="_blank">
+              <img src="img/rialto.png" alt="rialto bridge cafe cloud thumbnail">
+            </a>
+          </div>
           <div class="portfolio-card-text-container">
             <h5>Rialto Bridge Cafe</h5>
             <p>Website for Rialto Bridge Cafe - Client work</p>
@@ -249,9 +253,11 @@
         </div>
 
         <div class="portfolio-card">
-          <a href="https://storybooks.robertsoldan.com/" target="_blank">
-            <img src="img/storybooks.png" alt="storybooks thumbnail">
-          </a>
+          <div class="imgcontainer">
+            <a href="https://storybooks.robertsoldan.com/" target="_blank">
+              <img src="img/storybooks.png" alt="storybooks thumbnail">
+            </a>
+          </div>
           <div class="portfolio-card-text-container">
             <h5>Storybooks</h5>
             <p>Storybooks / article like website using Google OAuth 2.0</p>
@@ -280,9 +286,11 @@
       <div class="portfolio-card-container">
 
         <div class="portfolio-card">
-          <a href="https://bonvoyagewebdevca.herokuapp.com/" target="_blank">
-            <img src="img/bonvoyage.png" alt="bon voyage thumbnail">
-          </a>
+          <div class="imgcontainer">
+            <a href="https://bonvoyagewebdevca.herokuapp.com/" target="_blank">
+              <img src="img/bonvoyage.png" alt="bon voyage thumbnail">
+            </a>
+          </div>
           <div class="portfolio-card-text-container">
             <h5>Bon Voyage</h5>
             <p>Group project for creating a CRUD web app for a travel agency</p>
@@ -302,9 +310,11 @@
         </div>
 
         <div class="portfolio-card">
-          <a href="https://github.com/robertsoldan/carpoolapp" target="_blank">
-            <img src="img/cardiuil.png" alt="cardiuil cloud thumbnail">
-          </a>
+          <div class="imgcontainer">
+            <a href="https://github.com/robertsoldan/carpoolapp" target="_blank">
+              <img src="img/cardiuil.png" alt="cardiuil cloud thumbnail">
+            </a>
+          </div>
           <div class="portfolio-card-text-container">
             <h5>Cardiúil</h5>
             <p>Group project for creating a CRUD carpooling Java app</p>
@@ -325,9 +335,11 @@
       <div class="portfolio-card-container">
 
         <div class="portfolio-card">
-          <a href="https://robb1010.github.io/gameoflife/" target="_blank">
-            <img src="img/gameoflife.png" alt="game of life website thumbnail">
-          </a>
+          <div class="imgcontainer">
+            <a href="https://robb1010.github.io/gameoflife/" target="_blank">
+              <img src="img/gameoflife.png" alt="game of life website thumbnail">
+            </a>
+          </div>
           <div class="portfolio-card-text-container">
             <h5>Game of life</h5>
             <p>Game of life front end project</p>
@@ -347,9 +359,11 @@
         </div>
 
         <div class="portfolio-card">
-          <a href="https://robb1010.github.io/calculator/" target="_blank">
-            <img src="img/calculator.png" alt="calculator thumbnail">
-          </a>
+          <div class="imgcontainer">
+            <a href="https://robb1010.github.io/calculator/" target="_blank">
+              <img src="img/calculator.png" alt="calculator thumbnail">
+            </a>
+          </div>
           <div class="portfolio-card-text-container">
             <h5>Calculator</h5>
             <p>Full screen front end calculator</p>
@@ -369,9 +383,11 @@
         </div>
 
         <div class="portfolio-card">
-          <a href="https://robb1010.github.io/Markdown/" target="_blank">
-            <img src="img/markdown.png" alt="markdown thumbnail">
-          </a>
+          <div class="imgcontainer">
+            <a href="https://robb1010.github.io/Markdown/" target="_blank">
+              <img src="img/markdown.png" alt="markdown thumbnail">
+            </a>
+          </div>
           <div class="portfolio-card-text-container">
             <h5>Markdown editor</h5>
             <p>Github - like markdown editor</p>
@@ -391,9 +407,11 @@
         </div>
 
         <div class="portfolio-card">
-          <a href="https://robb1010.github.io/tictactoe/" target="_blank">
-            <img src="img/tictactoe.png" alt="tic tac toe thumbnail">
-          </a>
+          <div class="imgcontainer">
+            <a href="https://robb1010.github.io/tictactoe/" target="_blank">
+              <img src="img/tictactoe.png" alt="tic tac toe thumbnail">
+            </a>
+          </div>
           <div class="portfolio-card-text-container">
             <h5>Tic tac toe</h5>
             <p>Basic tic tac toe game</p>
@@ -413,9 +431,11 @@
         </div>
 
         <div class="portfolio-card">
-          <a href="https://robb1010.github.io/tiles/" target="_blank">
-            <img src="img/simonsays.png" alt="simon says thumbnail">
-          </a>
+          <div class="imgcontainer">
+            <a href="https://robb1010.github.io/tiles/" target="_blank">
+              <img src="img/simonsays.png" alt="simon says thumbnail">
+            </a>
+          </div>
           <div class="portfolio-card-text-container">
             <h5>Simon says</h5>
             <p>Basic Simon Says game</p>
